[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fancy-regex = "0.12.0"
num = "0.4.1"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
